<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="name.gaudat.panda.PagerActivity">
    <item android:icon="@android:drawable/ic_menu_info_details"
          android:id="@+id/action_gallery_details"
          android:title="@string/action_gallery_details"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_search_image"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_search_image"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_download_image"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/action_download_image"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_download_gallery"
          android:title="@string/action_download_gallery"
          app:showAsAction="never"/>
    <item android:id="@+id/action_update_image"
          android:title="@string/action_update_image"
          app:showAsAction="never"/>
    <item android:id="@+id/action_view_gallery"
          android:title="@string/action_view_gallery"
          app:showAsAction="never"/>
    <item android:id="@+id/action_image_details"
          android:title="@string/action_image_details"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
</menu>
